@@ -1,3 +1,9 @@
+2006-03-05  Yves Combe  <yves@ycombe.net>
+
+	fix tux mode playing already played cards.
+
+	* src/boards/memory.c: (display_card), (hide_card):
+
 2006-03-05  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	translation file list cleanup.
